fixed image load

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 		
 			<div id=mainItem>
 				<h3 class="imageTitles">Gifficult Giphy/Quiz APIs, Semantic UI</h3>
-				<a href=https://brendan838.github.io/groupProject_teamSoFetch/><img src=./images/browserpic.png class="portfolioImage"></a>
+				<a href=https://brendan838.github.io/groupProject_teamSoFetch/><img src=./images/browserpic.PNG class="portfolioImage"></a>
 			</div>
 		</div>		
 	
 		<div class="row2">
 			<div class="portfolioItem">
 			<h3 class="imageTitles">Work Planner- bootstrap, moment.js</h3>
-			<a href=https://brendan838.github.io/scheduleApp/><img src=./images/screenShot.png 
+			<a href=https://brendan838.github.io/scheduleApp/><img src=./images/screenShot.PNG
 			class="portfolioImage"></a>
 			
 			</div>
