--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="row2">
 			<div class="portfolioItem">
 			<h3 class="imageTitles">Work Planner- bootstrap, moment.js</h3>
-			<a href=https://brendan838.github.io/scheduleApp/><img src=./images/screenShot.PNG
+			<a href=https://brendan838.github.io/scheduleApp/><img src=./images/screenShot.png
 			class="portfolioImage"></a>
 			
 			</div>
