--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	
 	<div id=articleContent>
 	<p>
-	Hello! My name is Brendan. Welcome to my portfolio site. I am enrolled in the University of Minnesota Full Stack web development bootcamp. My below projects demonstrate my current experience with front-end development using html, css, javascript, jquery, bootstrap, and semantic ui. I am currently beginning study on the server side, and hope to be uploading more projects soon! Please don't hesitate to reach out if you are interested in connecting!
+	Hello! My name is Brendan. Welcome to my portfolio site. I am enrolled in the University of Minnesota Full Stack web development bootcamp. My below projects demonstrate my current experience with web development using html, css, javascript, jquery, bootstrap, and semantic ui. I am currently studing back-end web development, and am gaining experience with Node, Express, mySQL, Sequelize, and various other npm libraries. Please don't hesitate to reach out if you are interested in connecting!
 	</p>
 	</div>
 
@@ -42,28 +42,30 @@
 		<div class="row1">
 		
 			<div id=mainItem>
-				<h3 class="imageTitles">Gifficult Giphy/Quiz APIs, Semantic UI</h3>
-				<a href=https://brendan838.github.io/groupProject_teamSoFetch/><img src=./images/browserpic.PNG class="portfolioImage"></a>
+				<h3 class="imageTitles">Sto Yo Code- Node, Express, Sequelize, Handlebars</h3>
+				<a href=https://github.com/Brendan838/Project_2><img src=./images/stoYo.png class="portfolioImage"></a>
 			</div>
 		</div>		
 	
 		<div class="row2">
 			<div class="portfolioItem">
 			<h3 class="imageTitles">Work Planner- bootstrap, moment.js</h3>
-			<a href=https://brendan838.github.io/scheduleApp/><img src=./images/screenShot.png
+			<a href=https://brendan838.github.io/scheduleApp/><img src=./images/screenShot.png 
 			class="portfolioImage"></a>
 			
 			</div>
 			<div class="portfolioItem">
-			<h3 class="imageTitles">Weather Search- OpenWeather API, bootstrap</h3>
-			<a href=https://brendan838.github.io/weather_app/><img src=./images/weatherApp.png class="portfolioImage"></a>
+			<h3 class="imageTitles">Gifficult Giphy/Quiz APIs, Semantic UI</h3>
+			<a href=https://brendan838.github.io/groupProject_teamSoFetch><img src=./images/browserpic.png class="portfolioImage"></a>
 			</div>
 		</div>
 		<div class="row3">
-		 	 <div class="portfolioItem">
-			<h3 class="imageTitles"><a>scavenge (html/css)</a></h3>
-			<a href=https://www.atlasobscura.com><img src=./images/map.png class="portfolioImage" ></a>
+
+		 	<div class="portfolioItem">
+			<h3 class="imageTitles">Weather Search- OpenWeather API, bootstrap</h3>
+			<a href=https://brendan838.github.io/weather_app/><img src=./images/weatherApp.png class="portfolioImage"></a>
 			</div>
+
 			<div class="portfolioItem">
 			<h3 class="imageTitles">telescope.js</h3>
 			<a href=https://www.fifthstarlabs.com/#sky-guide><img src=./images/space.png class="portfolioImage">
