fixed image link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		
 			<div id=mainItem>
 				<h3 class="imageTitles">Sto Yo Code- Node, Express, Sequelize, Handlebars</h3>
-				<a href=https://github.com/Brendan838/Project_2><img src=./images/stoYo.png class="portfolioImage"></a>
+				<a href=https://stoyocode.herokuapp.com/><img src=./images/stoYo.png class="portfolioImage"></a>
 			</div>
 		</div>		
 	
@@ -56,7 +56,7 @@
 			</div>
 			<div class="portfolioItem">
 			<h3 class="imageTitles">Gifficult Giphy/Quiz APIs, Semantic UI</h3>
-			<a href=https://brendan838.github.io/groupProject_teamSoFetch><img src=./images/browserpic.png class="portfolioImage"></a>
+			<a href=https://brendan838.github.io/groupProject_teamSoFetch><img src=./images/browserpic.PNG class="portfolioImage"></a>
 			</div>
 		</div>
 		<div class="row3">
