--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class="portfolioItem">
 			<h3 class="imageTitles">Gifficult Giphy/Quiz APIs, Semantic UI</h3>
-			<a href=https://brendan838.github.io/groupProject_teamSoFetch><img src=./images/browserpic.png class="portfolioImage"></a>
+			<a href=https://brendan838.github.io/groupProject_teamSoFetch><img src=./images/gifficult.png class="portfolioImage"></a>
 			</div>
 		</div>
 		<div class="row3">
